{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 23,
  "lineage": "401cf98b-ead6-0856-9478-3f1a0a185ffe",
  "resources": [
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01380baafd04a10d8",
            "arn": "arn:aws:ec2:sa-east-1:489047582581:elastic-ip/eipalloc-01380baafd04a10d8",
            "domain": "vpc",
            "id": "eipalloc-01380baafd04a10d8",
            "network_border_group": "sa-east-1",
            "public_dns": "ec2-15-229-93-141.sa-east-1.compute.amazonaws.com",
            "public_ip": "15.229.93.141",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-subnet-16"
            },
            "tags_all": {
              "Name": "eip-subnet-16"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-025dd7a28898f2865",
            "arn": "arn:aws:ec2:sa-east-1:489047582581:elastic-ip/eipalloc-025dd7a28898f2865",
            "domain": "vpc",
            "id": "eipalloc-025dd7a28898f2865",
            "network_border_group": "sa-east-1",
            "public_dns": "ec2-54-207-130-145.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.207.130.145",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-subnet-32"
            },
            "tags_all": {
              "Name": "eip-subnet-32"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "i_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:489047582581:internet-gateway/igw-0fdeb16ce71e2fa24",
            "id": "igw-0fdeb16ce71e2fa24",
            "owner_id": "489047582581",
            "tags": {
              "Name": "custom-igw"
            },
            "tags_all": {
              "Name": "custom-igw"
            },
            "vpc_id": "vpc-0b12b9b705b9cd6ed"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nats",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01380baafd04a10d8",
            "association_id": "eipassoc-0a353ecbf6a74d223",
            "connectivity_type": "public",
            "id": "nat-0aafc768a4a39d113",
            "network_interface_id": "eni-06c16fcdd820c6ee3",
            "private_ip": "10.1.26.137",
            "public_ip": "15.229.93.141",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-024e656feb2ebe875",
            "tags": {
              "Name": "nat-to-subnet-16"
            },
            "tags_all": {
              "Name": "nat-to-subnet-16"
            }
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-025dd7a28898f2865",
            "association_id": "eipassoc-0a60b748d75aeeba0",
            "connectivity_type": "public",
            "id": "nat-01cfb715f4e205f43",
            "network_interface_id": "eni-0a51926a3e62d6ea9",
            "private_ip": "10.1.33.7",
            "public_ip": "54.207.130.145",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0746975718c0ca227",
            "tags": {
              "Name": "nat-to-subnet-32"
            },
            "tags_all": {
              "Name": "nat-to-subnet-32"
            }
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_routes_many",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04a77fe1fa0d4dfe61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0aafc768a4a39d113",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04a77fe1fa0d4dfe6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_nat_gateway.nats",
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b4f1ceac9c7304af1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01cfb715f4e205f43",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b4f1ceac9c7304af",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_nat_gateway.nats",
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fdeb16ce71e2fa24",
            "id": "r-rtb-03d9783d3f60b4f8d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03d9783d3f60b4f8d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_route_table.public_table",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:489047582581:route-table/rtb-04a77fe1fa0d4dfe6",
            "id": "rtb-04a77fe1fa0d4dfe6",
            "owner_id": "489047582581",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "route-to-nat-subnet-16"
            },
            "tags_all": {
              "Name": "route-to-nat-subnet-16"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b12b9b705b9cd6ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:489047582581:route-table/rtb-0b4f1ceac9c7304af",
            "id": "rtb-0b4f1ceac9c7304af",
            "owner_id": "489047582581",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "route-to-nat-subnet-32"
            },
            "tags_all": {
              "Name": "route-to-nat-subnet-32"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b12b9b705b9cd6ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:489047582581:route-table/rtb-03d9783d3f60b4f8d",
            "id": "rtb-03d9783d3f60b4f8d",
            "owner_id": "489047582581",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "route-to-igw"
            },
            "tags_all": {
              "Name": "route-to-igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b12b9b705b9cd6ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_private_routes_many",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05213a990a99919ef",
            "route_table_id": "rtb-04a77fe1fa0d4dfe6",
            "subnet_id": "subnet-08f5237b7d58ef398"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_nat_gateway.nats",
            "module.aws_vpc.aws_route.private_routes_many",
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.private_subnets",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000d0867ca133e36d",
            "route_table_id": "rtb-0b4f1ceac9c7304af",
            "subnet_id": "subnet-0348b5d276a2dd619"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.elastic_ip",
            "module.aws_vpc.aws_internet_gateway.i_gateway",
            "module.aws_vpc.aws_nat_gateway.nats",
            "module.aws_vpc.aws_route.private_routes_many",
            "module.aws_vpc.aws_route_table.private_tables",
            "module.aws_vpc.aws_subnet.private_subnets",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f317bc00a904056e",
            "route_table_id": "rtb-03d9783d3f60b4f8d",
            "subnet_id": "subnet-024e656feb2ebe875"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public_table",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6380ad4c52ac021",
            "route_table_id": "rtb-03d9783d3f60b4f8d",
            "subnet_id": "subnet-0746975718c0ca227"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public_table",
            "module.aws_vpc.aws_subnet.public_subnets",
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http-https-traffic",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:489047582581:security-group/sg-04005fbb05f69aafa",
            "description": "Http and Https application trafic.",
            "egress": [],
            "id": "sg-04005fbb05f69aafa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "http-elb-for-eks-sg",
            "name_prefix": "",
            "owner_id": "489047582581",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "http-https-traffic"
            },
            "tags_all": {
              "Name": "http-https-traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b12b9b705b9cd6ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": "icmp-ssh-traffic",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:489047582581:security-group/sg-0ca2776e8f03f2a84",
            "description": "Troubleshooting (icmp, ssh) application trafic.",
            "egress": [],
            "id": "sg-0ca2776e8f03f2a84",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "icmp-elb-for-eks-sg",
            "name_prefix": "",
            "owner_id": "489047582581",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "icmp-ssh-traffic"
            },
            "tags_all": {
              "Name": "icmp-ssh-traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b12b9b705b9cd6ed"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:489047582581:subnet/subnet-08f5237b7d58ef398",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.1.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f5237b7d58ef398",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "489047582581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-48",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "subnet-48",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b12b9b705b9cd6ed"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:489047582581:subnet/subnet-0348b5d276a2dd619",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.1.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0348b5d276a2dd619",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "489047582581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-64",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "subnet-64",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b12b9b705b9cd6ed"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:489047582581:subnet/subnet-024e656feb2ebe875",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.1.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024e656feb2ebe875",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "489047582581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-16",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "subnet-16",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b12b9b705b9cd6ed"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:489047582581:subnet/subnet-0746975718c0ca227",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.1.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0746975718c0ca227",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "489047582581",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-32",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "subnet-32",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b12b9b705b9cd6ed"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:489047582581:vpc/vpc-0b12b9b705b9cd6ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-00052c420818f89cd",
            "default_route_table_id": "rtb-06ded44e1c9ad6f48",
            "default_security_group_id": "sg-07ff7177508fff14f",
            "dhcp_options_id": "dopt-03d374a395d10fd5a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b12b9b705b9cd6ed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06ded44e1c9ad6f48",
            "owner_id": "489047582581",
            "tags": {
              "Name": "custom-vpc"
            },
            "tags_all": {
              "Name": "custom-vpc"
            }
          }
        }
      ]
    }
  ]
}